--- a/hot-tug.html
+++ b/hot-tug.html
@@ -46,7 +46,6 @@
           </h2>
         </header>
 
-        <!-- One -->
         <!-- <section class="wrapper style2 container special-alt">
           <div class="row gtr-50">
             <div class="col-8 col-12-narrower">
@@ -88,7 +87,6 @@
           </div>
         </section> -->
 
-        <!-- Two -->
         <!-- <section class="wrapper style1 container special">
           <div class="row">
             <div class="col-4 col-12-narrower">
@@ -130,7 +128,7 @@
           </div>
         </section> -->
 
-        <section class="wrapper style3 container special" style="padding-top: 3em; padding-bottom: 3em;">
+        <section class="wrapper style3 container special" style="padding-top: 3em; padding-bottom: 3em">
           <header class="major">
             <h2>What to expect</h2>
           </header>
@@ -218,7 +216,6 @@
         </section>
       </article>
 
-      <!-- CTA -->
       <section id="cta">
         <header>
           <h2>Ready to book your next <strong>adventure</strong>?</h2>
@@ -232,7 +229,6 @@
         </footer>
       </section>
 
-      <!-- Footer -->
       <footer id="footer">
         <!-- <ul class="icons">
           <li>
