--- a/offerings.html
+++ b/offerings.html
@@ -37,7 +37,6 @@
         </div>
       </section>
 
-      <!-- Main -->
       <article id="main">
         <header class="special container">
           <h2>
@@ -189,7 +188,6 @@
           </div>
         </section>
 
-        <!-- One -->
         <!-- <section class="wrapper style2 container special-alt">
           <div class="row gtr-50">
             <div class="col-8 col-12-narrower">
@@ -234,8 +232,7 @@
           </div>
         </section> -->
 
-        <!-- Two -->
-        <section class="wrapper style1 container special">
+        <!-- <section class="wrapper style1 container special">
           <div class="row">
             <div class="col-4 col-12-narrower">
               <section>
@@ -274,7 +271,7 @@
               </section>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <section class="wrapper style4 container">
           <div class="content">
@@ -300,7 +297,6 @@
         </section>
       </article>
 
-      <!-- CTA -->
       <section id="cta">
         <header>
           <h2>Ready to book your next <strong>adventure</strong>?</h2>
@@ -314,7 +310,6 @@
         </footer>
       </section>
 
-      <!-- Footer -->
       <footer id="footer">
         <!-- <ul class="icons">
           <li>
