--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Contact</title>
+    <title>Contact | Jacuzzi Journey</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -9,7 +9,6 @@
   </head>
   <body class="contact is-preload">
     <div id="page-wrapper">
-      <!-- Header -->
       <header id="header">
         <h1 id="logo"><a href="index.html">Jacuzzi Journey</a></h1>
         <nav id="nav">
@@ -31,7 +30,6 @@
         </nav>
       </header>
 
-      <!-- Main -->
       <article id="main">
         <header class="special contact container">
           <span class="icon solid fa-envelope"></span>
@@ -39,9 +37,7 @@
           <p>Use the form below to contact us for more information.</p>
         </header>
 
-        <!-- One -->
         <section class="wrapper style4 special container medium">
-          <!-- Content -->
           <div class="content">
             <form>
               <div class="row gtr-50">
@@ -68,7 +64,6 @@
         </section>
       </article>
 
-      <!-- Footer -->
       <footer id="footer">
         <!-- <ul class="icons">
           <li>
