--- a/offerings.html
+++ b/offerings.html
@@ -24,7 +24,7 @@
                 <li><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
-            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="aboutus.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -64,7 +64,7 @@
                   scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
                 </p>
                 <ul class="buttons">
-                  <li><a href="hot-tug.html" class="button">Book now</a></li>
+                  <li><a href="hot-tug.html" class="button">Learn more</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -86,7 +86,7 @@
                   providing guests with a chance to reconnect with nature and unwind under the stars.
                 </p>
                 <ul class="buttons">
-                  <li><a href="camping.html" class="button">Book now</a></li>
+                  <li><a href="camping.html" class="button">Learn more</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -110,7 +110,7 @@
                   allowing guests to sleep amidst the trees while enjoying stunning views and the soothing sounds of nature.
                 </p>
                 <ul class="buttons">
-                  <li><a href="tree-tent.html" class="button">Book now</a></li>
+                  <li><a href="tree-tent.html" class="button">Learn more</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -133,7 +133,7 @@
                   natural world.
                 </p>
                 <ul class="buttons">
-                  <li><a href="guided.html" class="button">Book now</a></li>
+                  <li><a href="guided.html" class="button">Learn more</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -149,7 +149,7 @@
                     <span class="price"> <span class="currency-symbol">CA$</span>199</span>
                   </span></a
                 >
-                <header style="margin-bottom: 50px">
+                <header>
                   <h3><a href="contact.html">Event Hosting</a></h3>
                 </header>
                 <p>
@@ -171,7 +171,7 @@
                     <span class="price"> <span class="currency-symbol">CA$</span>199</span>
                   </span></a
                 >
-                <header style="margin-bottom: 50px">
+                <header>
                   <h3><a href="contact.html">Equipment Rental and Sales</a></h3>
                 </header>
                 <p>
@@ -273,7 +273,7 @@
           </div>
         </section> -->
 
-        <section class="wrapper style4 container">
+        <!-- <section class="wrapper style4 container">
           <div class="content">
             <section>
               <header>
@@ -294,7 +294,7 @@
               </p>
             </section>
           </div>
-        </section>
+        </section> -->
       </article>
 
       <section id="cta">
