--- a/package-builder.html
+++ b/package-builder.html
@@ -24,7 +24,7 @@
                 <li class="current"><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
-            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="aboutus.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
