--- a/hot-tug.html
+++ b/hot-tug.html
@@ -39,101 +39,12 @@
       </section>
 
       <article id="main">
-        <header class="special container">
-          <h2>
-            Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
-            scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
-          </h2>
-        </header>
+        <section class="wrapper style3 container special expect-container">
+          <!-- <header class="major">
+            <h2>What to <strong>expect</strong></h2>
+          </header> -->
 
-        <!-- <section class="wrapper style2 container special-alt">
-          <div class="row gtr-50">
-            <div class="col-8 col-12-narrower">
-              <header>
-                <h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
-              </header>
-              <p>
-                Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique
-                purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.
-              </p>
-              <footer>
-                <ul class="buttons">
-                  <li><a href="#" class="button">Find Out More</a></li>
-                </ul>
-              </footer>
-            </div>
-            <div class="col-4 col-12-narrower imp-narrower">
-              <ul class="featured-icons">
-                <li>
-                  <span class="icon fa-clock"><span class="label">Feature 1</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-laptop"><span class="label">Feature 3</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-inbox"><span class="label">Feature 4</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-lock"><span class="label">Feature 5</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-cog"><span class="label">Feature 6</span></span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section> -->
-
-        <!-- <section class="wrapper style1 container special">
           <div class="row">
-            <div class="col-4 col-12-narrower">
-              <section>
-                <span class="icon solid featured fa-check"></span>
-                <header>
-                  <h3>This is Something</h3>
-                </header>
-                <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis
-                  turpis. Integer ut fermentum.
-                </p>
-              </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-              <section>
-                <span class="icon solid featured fa-check"></span>
-                <header>
-                  <h3>Also Something</h3>
-                </header>
-                <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis
-                  turpis. Integer ut fermentum.
-                </p>
-              </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-              <section>
-                <span class="icon solid featured fa-check"></span>
-                <header>
-                  <h3>Probably Something</h3>
-                </header>
-                <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis
-                  turpis. Integer ut fermentum.
-                </p>
-              </section>
-            </div>
-          </div>
-        </section> -->
-
-        <section class="wrapper style3 container special" style="padding-top: 3em; padding-bottom: 3em">
-          <header class="major">
-            <h2>What to expect</h2>
-          </header>
-
-          <div class="row align-items-center">
             <div class="col-4 d-none d-lg-block">
               <img src="images/hot-tug3.png" alt="Hot tug" />
             </div>
@@ -183,6 +94,13 @@
             </div>
           </div>
         </section>
+
+        <header class="special container">
+          <h2>
+            Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
+            scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
+          </h2>
+        </header>
 
         <section class="wrapper style3 container special">
           <header class="major">
