--- a/guided.html
+++ b/guided.html
@@ -39,6 +39,62 @@
       </section>
 
       <article id="main">
+        <section class="wrapper style3 container special expect-container">
+          <!-- <header class="major">
+            <h2>What to expect</h2>
+          </header> -->
+
+          <div class="row align-items-center">
+            <div class="col-4 d-none d-lg-block">
+              <img src="images/hot-tug3.png" alt="Hot tug" />
+            </div>
+            <div class="col-8 pl-xl-0">
+              <ul class="row list-unstyled expect-items mb-0">
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Pricing</h3>
+                        <p class="card-featured__text">$100 per night</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Availability</h3>
+                        <p class="card-featured__text">7 days a week, summer months, rain or shine</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Capacity</h3>
+                        <p class="card-featured__text">2 tents per group</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth expect-item--last">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Requirements</h3>
+                        <p class="card-featured__text">Camper must be 18+ with a valid ID</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
         <header class="special container">
           <h2>
             Offer guided tours and experiences led by experienced outdoor enthusiasts. Whether it's exploring hidden gems in the wilderness, embarking on scenic
@@ -127,62 +183,6 @@
             </div>
           </div>
         </section> -->
-
-        <section class="wrapper style3 container special">
-          <header class="major">
-            <h2>What to expect</h2>
-          </header>
-
-          <div class="row align-items-center">
-            <div class="col-4 d-none d-lg-block">
-              <img src="images/hot-tug3.png" alt="Hot tug" />
-            </div>
-            <div class="col-8 pl-xl-0">
-              <ul class="row list-unstyled expect-items mb-0">
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Pricing</h3>
-                        <p class="card-featured__text">$300 for 2 hours</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Availability</h3>
-                        <p class="card-featured__text">7 days a week, summer months, rain or shine</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Capacity</h3>
-                        <p class="card-featured__text">6 people maximum per boat.</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth expect-item--last">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Requirements</h3>
-                        <p class="card-featured__text">Renter must be 18+ with a valid ID (No boater's license required)</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
 
         <section class="wrapper style3 container special">
           <header class="major">
