--- a/tree-tent.html
+++ b/tree-tent.html
@@ -39,53 +39,68 @@
       </section>
 
       <article id="main">
+        <section class="wrapper style3 container special expect-container">
+          <!-- <header class="major">
+            <h2>What to expect</h2>
+          </header> -->
+
+          <div class="row align-items-center">
+            <div class="col-4 d-none d-lg-block">
+              <img src="images/hot-tug3.png" alt="Hot tug" />
+            </div>
+            <div class="col-8 pl-xl-0">
+              <ul class="row list-unstyled expect-items mb-0">
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Pricing</h3>
+                        <p class="card-featured__text">$100 per night</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Availability</h3>
+                        <p class="card-featured__text">7 days a week, summer months, rain or shine</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Capacity</h3>
+                        <p class="card-featured__text">2 tents per group</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth expect-item--last">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Requirements</h3>
+                        <p class="card-featured__text">Camper must be 18+ with a valid ID</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
         <header class="special container">
           <h2>
             Elevate the camping experience with unique tree tents suspended above the ground. These innovative accommodations offer comfort and adventure,
             allowing guests to sleep amidst the trees while enjoying stunning views and the soothing sounds of nature.
           </h2>
         </header>
-
-        <!-- <section class="wrapper style2 container special-alt">
-          <div class="row gtr-50">
-            <div class="col-8 col-12-narrower">
-              <header>
-                <h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
-              </header>
-              <p>
-                Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique
-                purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.
-              </p>
-              <footer>
-                <ul class="buttons">
-                  <li><a href="#" class="button">Find Out More</a></li>
-                </ul>
-              </footer>
-            </div>
-            <div class="col-4 col-12-narrower imp-narrower">
-              <ul class="featured-icons">
-                <li>
-                  <span class="icon fa-clock"><span class="label">Feature 1</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-laptop"><span class="label">Feature 3</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-inbox"><span class="label">Feature 4</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-lock"><span class="label">Feature 5</span></span>
-                </li>
-                <li>
-                  <span class="icon solid fa-cog"><span class="label">Feature 6</span></span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section> -->
 
         <!-- <section class="wrapper style1 container special">
           <div class="row">
@@ -127,62 +142,6 @@
             </div>
           </div>
         </section> -->
-
-        <section class="wrapper style3 container special">
-          <header class="major">
-            <h2>What to expect</h2>
-          </header>
-
-          <div class="row align-items-center">
-            <div class="col-4 d-none d-lg-block">
-              <img src="images/hot-tug3.png" alt="Hot tug" />
-            </div>
-            <div class="col-8 pl-xl-0">
-              <ul class="row list-unstyled expect-items mb-0">
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Pricing</h3>
-                        <p class="card-featured__text">$300 for 2 hours</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Availability</h3>
-                        <p class="card-featured__text">7 days a week, summer months, rain or shine</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Capacity</h3>
-                        <p class="card-featured__text">6 people maximum per boat.</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="col-6">
-                  <div class="expect-item expect-item--setWidth expect-item--last">
-                    <div class="card-featured position-relative">
-                      <div class="card-featured__contents no-bottom">
-                        <h3>Requirements</h3>
-                        <p class="card-featured__text">Renter must be 18+ with a valid ID (No boater's license required)</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
 
         <section class="wrapper style3 container special">
           <header class="major">
