--- a/camping.html
+++ b/camping.html
@@ -45,10 +45,10 @@
           </header> -->
 
           <div class="row">
-            <div class="col-4 d-none d-lg-block">
+            <div class="col-4 col-12-narrower">
               <img src="images/camping-retreat.jpg" alt="Camping Retreat" />
             </div>
-            <div class="col-8 pl-xl-0">
+            <div class="col-8 col-12-narrower">
               <ul class="row list-unstyled expect-items mb-0">
                 <li class="col-6">
                   <div class="expect-item expect-item--setWidth">
