--- a/camping.html
+++ b/camping.html
@@ -50,7 +50,7 @@
             </div>
             <div class="col-8 col-12-narrower">
               <ul class="row list-unstyled expect-items mb-0">
-                <li class="col-6">
+                <li class="col-6 col-12-narrower">
                   <div class="expect-item expect-item--setWidth">
                     <div class="card-featured position-relative">
                       <div class="card-featured__contents no-bottom">
@@ -60,7 +60,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-6">
+                <li class="col-6 col-12-narrower">
                   <div class="expect-item expect-item--setWidth">
                     <div class="card-featured position-relative">
                       <div class="card-featured__contents no-bottom">
@@ -70,7 +70,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-6">
+                <li class="col-6 col-12-narrower">
                   <div class="expect-item expect-item--setWidth">
                     <div class="card-featured position-relative">
                       <div class="card-featured__contents no-bottom">
@@ -80,7 +80,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-6">
+                <li class="col-6 col-12-narrower">
                   <div class="expect-item expect-item--setWidth expect-item--last">
                     <div class="card-featured position-relative">
                       <div class="card-featured__contents no-bottom">
